iOS GoogleMaps Configuration

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -10,6 +10,9 @@ target 'routesAppRNTS' do
   pod 'Permission-LocationAccuracy', :path => "#{permissions_path}/LocationAccuracy"
   pod 'Permission-LocationAlways', :path => "#{permissions_path}/LocationAlways"
   pod 'Permission-LocationWhenInUse', :path => "#{permissions_path}/LocationWhenInUse"
+  
+  rn_maps_path = '../node_modules/react-native-maps'
+  pod 'react-native-google-maps', :path => rn_maps_path
 
   config = use_native_modules!
 
